<resources>
    <string name="app_name">TruVox</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_our_transgender_voice_coaching_app">Welcome to our transgender voice coaching app.</string>
    <string name="introduction">Introduction</string>
    <string name="welcome_to_truvox_a_prototype_voice_coaching_app_that_aims_to_help_transfeminine_individuals_practice_changing_their_voice_in_different_ways_truvox_is_still_being_developed_currently_focuses_on_speakers_of_american_english_and_is_not_currently_intended_to_be_used_as_a_complete_gender_affirming_voice_training_regimen_we_recommend_combining_it_with_a_human_coach_and_other_sources_of_information">
    Welcome to TruVox a prototype voice coaching app that aims to help transfeminine individuals practice changing their voice in different ways. TruVox is still being developed currently focuses on speakers of american english and is not currently intended to be used as a complete gender affirming voice training regimen. We recommend combining it with a human coach and other sources of information.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_x_settings_button">The x settings button</string>
    <string name="assessment_title">Assessment</string>
    <string name="settings_button">Settings</string>
    <string name="assessment_instruction">To begin your voice assessment, record your voice reading the transcript prompts on the next pages.</string>
    <string name="begin_button">Begin</string>
    <string name="truvox_was_developed_by_the_university_of_cincinnati_department_of_electrical_and_computer_engineering_under_supervision_of_prof_vesna_novak_contributors_include_xiangyi_wang_sam_weese_om_jadhav_victoria_mckenna_maggie_lyon_ansh_bhanushali_rey_hicks_and_tyler_diloreto_the_project_was_funded_by_the_national_institute_of_deafness_and_communication_disorders_project_r21dc021537_and_by_a_collaborative_pilot_grant_from_the_university_of_cincinnati_office_of_research_the_pitch_calculation_and_display_code_is_based_on_code_by_mark_huckvale_university_college_london_sentences_for_the_chanting_exercise_were_previously_published_in_stemple_et_al_clinical_voice_pathology_theory_and_management_2020_the_app_is_still_in_development_and_updates_are_added_regularly">TruVox was developed by the University of Cincinnati Department of Electrical and Computer Engineering under supervision of Prof. Vesna Novak. Contributors include Xiangyi Wang, Sam Weese, Om Jadhav, Victoria McKenna, Maggie Lyon, Ansh Bhanushali, Rey Hicks, and Tyler DiLoreto. The project was funded by the National Institute of Deafness and Communication Disorders (project R21DC021537) and by a Collaborative Pilot Grant from the University of Cincinnati Office of Research. The pitch calculation and display code is based on code by Mark Huckvale, University College London. Sentences for the chanting exercise were previously published in Stemple et al., \'Clinical Voice Pathology: Theory and Management\', 2020. The app is still in development, and updates are added regularly.</string>
    <string name="our_group_aims_to_provide_free_and_accessible_gender_affirming_voice_coaching_software_that_can_be_used_by_trans_people_as_a_supplement_to_professional_voice_coaching_or_as_a_stand_alone_tool_by_trans_people_who_cannot_access_professional_voice_coaching_we_acknowledge_that_pitch_is_not_the_only_component_of_gender_affirming_voice_coaching_but_have_focused_on_it_in_this_first_app_since_it_is_easily_understood_by_beginners_in_the_future_we_plan_to_expand_to_apps_for_coaching_resonance_and_other_aspects_of_transgender_voice">Our group aims to provide free and accessible gender-affirming voice coaching software that can be used by trans people as a supplement to professional voice coaching or as a stand-alone tool by trans people who cannot access professional voice coaching. We acknowledge that pitch is not the only component of gender-affirming voice coaching, but have focused on it in this first app since it is easily understood by beginners. In the future, we plan to expand to apps for coaching resonance and other aspects of transgender voice.</string>
    <string name="about">About</string>
    <string name="if_you_would_like_to_discuss_the_project_feel_free_to_reach_out_to_prof_novak_at_novakdn_ucmail_uc_edu">If you would like to discuss the project, feel free to reach out to Prof. Novak at novakdn@ucmail.uc.edu.</string>
</resources>