<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_flipped"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="197dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:src="@drawable/logo_truvox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Settings Icon -->
    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/gear_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Box  app:layout_constraintTop_toBottomOf="@id/logo" -->
    <androidx.cardview.widget.CardView
        android:id="@+id/textContainer"
        android:layout_width="360dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#80F3E7E7"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <!-- Welcome  -->
            <TextView
                android:id="@+id/welcomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/tru_text"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_our_transgender_voice_coaching_app"
                android:textColor="@color/tru_text"
                android:textSize="16sp" />

            <!-- Introduction  -->
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/introductionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:textColor="@color/tru_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/introductionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_truvox_a_prototype_voice_coaching_app_that_aims_to_help_transfeminine_individuals_practice_changing_their_voice_in_different_ways_truvox_is_still_being_developed_currently_focuses_on_speakers_of_american_english_and_is_not_currently_intended_to_be_used_as_a_complete_gender_affirming_voice_training_regimen_we_recommend_combining_it_with_a_human_coach_and_other_sources_of_information"
                android:textColor="@color/tru_text"
                android:textSize="16sp" />

            <!-- About  -->
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/aboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About"
                android:textColor="@color/tru_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Insert info from 'About' page on website here"
                android:textColor="@color/tru_text"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
